# llama-stack-evals

./: .dockerignore  .gitattributes  Dockerfile  LICENSE  README.md  REPRODUCING.md  pyproject.toml  run_all.sh
configs/: config_a_ungated_client.yaml  config_b_gated_client.yaml  config_c_ungated_server.yaml  config_d_gated_server.yaml  config_e2e_vllm_gpu.yaml
data/documents/: doc_engineering_000.txt  doc_engineering_001.txt  doc_engineering_002.txt  doc_engineering_003.txt  doc_engineering_004.txt  doc_engineering_005.txt  doc_engineering_006.txt  doc_engineering_007.txt  doc_engineering_008.txt  doc_engineering_009.txt  doc_engineering_010.txt  doc_engineering_011.txt  doc_engineering_012.txt  doc_engineering_013.txt  doc_engineering_014.txt  doc_engineering_015.txt  doc_engineering_016.txt  doc_engineering_017.txt  doc_engineering_018.txt  doc_engineering_019.txt  doc_engineering_020.txt  doc_engineering_021.txt  doc_engineering_022.txt  doc_engineering_023.txt  doc_engineering_024.txt  doc_engineering_025.txt  doc_engineering_026.txt  doc_engineering_027.txt  doc_engineering_028.txt  doc_engineering_029.txt  doc_engineering_030.txt  doc_engineering_031.txt  doc_engineering_032.txt  doc_engineering_033.txt  doc_engineering_034.txt  doc_engineering_035.txt  doc_engineering_036.txt  doc_engineering_037.txt  doc_engineering_038.txt  doc_engineering_039.txt  (+261 more)
data/queries/: authorized_queries.json  cross_tenant_probes.json  (+1 more)
experiments/: 01_cross_tenant_leakage.md  02_throughput_scaling.md  03_prompt_injection_probes.md  04_multitenant_retrieval_benchmarks.md  05_e2e_latency_overhead.md  06_predicate_pushdown_scaling.md
scripts/: analyze_results.py  auth_server.py  bench_e2e_latency.py  bench_predicate_pushdown.py  client_orchestration.py  generate_data.py  ingest_data.py  run_experiment.py  run_injection_probes.py
(+26 files in other folders)
