[project]
name = "llama-stack-evals"
version = "0.1.0"
description = "Multitenant RAG security and performance evaluation for Llama Stack"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Francisco Javier Arceo", email = "farceo@redhat.com"},
    {name = "Varsha Prasad Narsing", email = "vnarsing@redhat.com"},
]

dependencies = [
    "llama-stack>=0.7.0,<0.8",
    "openai>=2.5.0",
    "fastapi>=0.115.0,<1.0",
    "uvicorn>=0.30.0,<1.0",
    "numpy>=1.26.0,<3.0",
    "matplotlib>=3.9.0,<4.0",
    "pydantic>=2.9.0,<3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "chardet>=5.0.0",
    "sqlite-vec>=0.1.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
# For running analysis only (no Llama Stack server needed)
analysis = [
    "numpy>=1.26.0,<3.0",
    "matplotlib>=3.9.0,<4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = []
